# mesh-localization

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  prometheus.yml  rssi-test-plan.txt
.cargo/: config.toml
.github/workflows/: ci.yaml
esp32-firmware/: Cargo.toml  build.rs
esp32-firmware/src/: kabsch.rs  lib.rs  mds.rs  routing.rs  screen.rs  state.rs  telemetry.rs  topology.rs  utils.rs  wificonfig.rs
grafana/dashboards/: mesh-telemetry.json
logs/: perf-log-1782667779393.csv  perf-log-1782670061317.csv  rssi-inside-11m-1782652810371.csv  rssi-inside-13m-1782653205722.csv  rssi-inside-1m-1782651778152.csv  rssi-inside-3m-1782651851713.csv  rssi-inside-5m-1782652050407.csv  rssi-inside-5m-1782652470103.csv  rssi-inside-7m-1782652175885.csv  rssi-inside-7m-1782652535513.csv  rssi-inside-9m-1782652686862.csv  rssi-outside-10m-1782648083500.csv  rssi-outside-15m-1782648202275.csv  rssi-outside-1m-1782645111343.csv  rssi-outside-20m-1782648293691.csv  rssi-outside-2m-1782645185058.csv  rssi-outside-3m-1782645261391.csv  rssi-outside-4m-1782645353047.csv  rssi-outside-5m-1782645456993.csv  rssi-outside-6m-1782645634668.csv  rssi-outside-7m-1782645725983.csv  rssi-outside-8m-1782647832149.csv  rssi-outside-9m-1782648029932.csv
logs/analysis/: rssi-stats.csv
logs/walking/: rssi-inside-13m-1782653248936.csv  rssi-inside-13m-1782653278876.csv  rssi-inside-m-1782650458294.csv  rssi-inside-m-1782650687215.csv  rssi-inside-m-1782650779276.csv  rssi-inside-m-1782652870512.csv  rssi-outside-1782653590484.csv  rssi-outside-1782653723592.csv  rssi-outside-1782653783547.csv
manim/: README.md
manim/GCDL/: scene.py
manim/GDL/: scene.py
mesh-ui/: Cargo.toml
mesh-ui/src/: main.rs
results/: mds-log-1782673771152.csv  mds-log-1782673859532.csv  mds-log-1782673916631.csv  mds-log-1782678396156.csv  mds-log-1782679087206.csv  mds-log-1782679256255.csv  mds-log-1782682265392.csv  mds-log-1782682340985.csv  mds-log-1782682406131.csv  mds-log-1782682689640.csv  mds-log-1782683213009.csv  mds-log-polygon-library.csv  mds-log-polygon-square.csv  mds-log-polygon-triangle.csv  perf-log-1782569588990.csv  perf-log-1782678209696.csv
scripts/: analyze_rssi.py  localization.ipynb  localization2.ipynb  perf_stats.py  plot_mds.py  polygon_analysis.ipynb  tune_filter.py
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  mds.rs  state.rs
telemetry-server/: Cargo.toml
