[package]
edition = "2024"
name = "mesh-localization"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "mesh-localization"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.1", features = ["esp32c3", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32c3"] }        # your chip

esp-radio = { version = "0.18", features = [
  "esp32c3",
  "wifi",
  "unstable",
  "esp-now",
] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp32c3",
  "log-04",
  "esp-radio",
  "esp-alloc",
] }
log = "0.4.27"

embassy-executor = { version = "0.10.0", features = [
  "log",
  "scheduler-priority",
] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-backtrace = { version = "0.19.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c3", "log-04"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
esp-alloc = "0.10.0"
hashbrown = "0.17.1"
heapless = "0.9.3"
libm = "0.2.16"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
