[package]
edition = "2024"
name = "esp32-firmware"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32-firmware"
path = "./src/bin/main.rs"

[dependencies]
shared = { path = "../shared" }
defmt = "1"
defmt-rtt = "1"
esp-hal = { version = "1.1", features = ["esp32c3", "defmt", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32c3"] }       # your chip

esp-radio = { version = "0.18", features = [
  "esp32c3",
  "wifi",
  "unstable",
  "esp-now",
  "defmt",
] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp32c3",
  "defmt",
  "esp-radio",
  "esp-alloc",
] }

embassy-executor = { version = "0.10.0", features = [
  "defmt",
  "scheduler-priority",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.19.0", features = [
  "esp32c3",
  "panic-handler",
  "defmt",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
esp-alloc = "0.10.0"
hashbrown = { version = "0.17.1", features = ["serde"] }
heapless = { version = "0.9.3", features = ["serde"] }
postcard = "1.1.3"
fixed = { version = "1", features = ["serde"] }
cordic = "0.1"
embedded-io-async = "0.7.0"
embassy-net = { version = "0.9.1", features = [
  "proto-ipv4",
  "tcp",
  "udp",
  "dns",
  "dhcpv4",
  "medium-ip",
  "defmt",
] }
smoltcp = { version = "0.13.1", default-features = false, features = [
  "proto-ipv4",
  "socket",
  "socket-udp",
  "socket-tcp",
  "socket-dns",
  "socket-dhcpv4",
  "medium-ip",
] }
minimq = { version = "0.12.0", default-features = false }
ratatui = { version = "=0.30.0", default-features = false, features = [
  "portable-atomic",
] }
mousefood = { version = "0.5.0", default-features = false, features = [
  "fonts",
] }
ssd1306 = "0.10.0"
display-interface = "0.5"
embedded-graphics = "0.8"
embedded-hal = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
embassy-futures = "0.1.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
