[package]
name = "mesh-ui"
version = "0.1.0"
description = "Desktop application to inspect the mesh network"
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
heapless = {version = "0.9.3", features = ["serde"]}
postcard = "1.1.3"
ratatui = "0.30.0"
rumqttc = "0.25.1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
